fixing the css spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  max-width: 800px;
   background: #fafafa;
   color: #333;
+  margin: 0 auto;
 }
 
 /* header */
@@ -32,7 +34,7 @@ body {
 /* individual card */
 .emoji {
   background: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid hsl(0, 0%, 35%);
   border-radius: 8px;
   padding: 1.5rem;
   display: flex;
